# financial-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pnpm-lock.yaml  tsconfig.json
agent/: langgraph.json  package.json
agent/baml_src/: investor_agent.baml  python_calculator.baml
agent/src/: index.ts  investor_agent.ts
backend/: .gitignore  README.md  eslint.config.js  langgraph.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/agent/baml_client/: async_client.ts  async_request.ts  inlinedbaml.ts  parser.ts  partial_types.ts  sync_client.ts  sync_request.ts  type_builder.ts  types.ts
backend/agent/baml_src/: investor_agent.baml  python_calculator.baml  web_researcher.baml
backend/agent/src/: calculator.ts  index.ts  investor_agent.ts  status-publisher.ts  subagents.ts  tools.ts  web-researcher.ts
backend/lib/: swagger.ts
backend/src/: api-app.module.ts  main.ts
backend/src/api/: api.module.ts  index.ts  investor-agent.controller.ts
backend/src/config/: api-app.config.ts
backend/src/health/: health.controller.ts  (+1 more)
baml_src/: web_researcher.baml
frontend/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
frontend/src/: Chat.css  Chat.tsx  api.ts  index.css
recommendation-service/: .gitignore  README.md  example_usage.py  pyproject.toml  start.sh
recommendation-service/app/: config.py  database.py  embedding_service.py  keyword_search_service.py  main.py  models.py  pgvector_service.py  schemas.py  tfidf_service.py
recommendation-service/app/routers/: partners.py  recommendations.py
src/: subagents.ts
(+10 files in other folders)
