[project]
name = "recommendation-service"
version = "1.0.0"
description = "FastAPI-based recommendation system using embeddings and pgvector"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.31",
    "psycopg[binary]>=3.1.0",
    "pgvector==0.3.0",
    "sentence-transformers>=2.5.1",
    "python-dotenv==1.0.0",
    "httpx==0.26.0",
]
